Fixed layout on smaller devices.

--- a/css/agency.css
+++ b/css/agency.css
@@ -48,7 +48,7 @@ header .intro-text .intro-heading { font-family: Montserrat, "Helvetica Neue", H
   header .intro-text .intro-heading { font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif; text-transform: uppercase; font-weight: 700; font-size: 75px; line-height: 75px; margin-bottom: 50px }
 }
 section { padding: 50px 0 }
-section h2.section-heading { font-size: 40px; margin-top: 0; margin-bottom: 15px }
+section h2.section-heading { font-size: 40px; margin-top: 50px; margin-bottom: 15px }
 section h3.section-subheading { font-size: 16px; font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif; text-transform: none; font-style: italic; font-weight: 400; margin-bottom: 75px }
 @media (min-width:768px) {
   section { padding: 50px 0 }
